[tool.poetry]
name = "ai-expert-advisor"
version = "0.0.0"
description = "automated trading with ai"
authors = ["Adam West <adam.west@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.11"
pandas-ta = "^0.3.14b0"
gradient-free-optimizers = "^1.4.1"
black = "^24.4.2"
pytest = "^8.2.0"
ta-lib = {version = "^0.4.28", optional = true}
requests = "^2.31.0"
scipy = "1.10.1"
scikit-learn = "1.3.2"
pytest-cov = "^5.0.0"
tox = "^4.15.0"
jupyter = "^1.0.0"
torch = "^2.3.0"
v20 = "^3.0.25.0"

[build-system]
requires = ["poetry>=1.7.0"]
build-backend = "poetry.masonry.api"

